--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markdownitapp",
   "version": "1.0.0",
-  "description": "This template provides an easy way to use NodeJS v16 on Replit! As of writing, NodeJS repls have Node v12, which is several years out of date.",
+  "description": "create webpage with markdown style with markdown-it",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +19,7 @@
     "toml-require": "latest"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Syrup",
+  "license": "MIT"
 }
 
