--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "create webpage with markdown style with markdown-it",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "dependencies": {
     "markdown-it": "latest",
