add comment section

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
+# ALWAYS REFRESH REPL WHEN FILE IS EDITED
+
 [info]
 site = "https://markdownitapp.mioun.repl.co/" # Replace with your web url
 sitename="markdownitapp" # Replace with your web name
+darkmode=false # Enable or disable darkmode (beta)
