feat: upgrade to Node.js v22+ with modern ES modules and new features
Major Updates:
- Upgrade Node.js engine requirement to >=22.0.0
- Use modern node: prefix imports (node:fs, node:path)
- Replace fileURLToPath with import.meta.dirname
- Update glob package from v8 to v11 with async/await patterns
- Convert forEach to for...of loops with continue statements
- Full ES modules support across all files

New Features:
- GitHub-style alerts support ([!NOTE], [!TIP], [!IMPORTANT], [!WARNING], [!CAUTION])
- SVG icons with ghost/transparent style (60% opacity, 90% on hover)
- Pico CSS color palette integration for alerts
- Handlebars helpers: escape, html, var, lbrace, rbrace, raw
- Fixed clipboard button positioning in code blocks (stays visible on horizontal scroll)
- SafeString implementation for proper HTML escape/render

Improvements:
- Better code organization with pure ES modules
- Enhanced dark mode support for all alerts
- Smooth transitions and hover effects
- Responsive design for all new components
- Demo pages for alerts and helpers (/alerts-demo, /helpers-demo)

Files Added:
- helpers/markdown-it-alerts.js - GitHub alerts plugin
- helpers/index.js - Handlebars helper functions
- views/markdown/alerts-demo.md - Alerts showcase
- views/markdown/helpers-demo.md - Helpers documentation
- cli/build.js - Static site builder

All scripts tested and working:
✓ npm run minify
✓ npm run build
✓ npm start

Yeah, I'm bringing this project back to life :)

--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,4 @@
 site = "https://markdownitapp.mioun.repl.co/" # Replace with your web url
 sitename="markdownitapp" # Replace with your web name
 darkmode=false # Default dark mode setting (users can override with toggle button)
+css_framework="pico" # Options: "custom" (default), "pico" (classless CSS framework)
