--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
-    { "source": "/((?!.*\\.).*)", "destination": "/$1.html" }
-  ]
+  "installCommand": "npm install"
 }
